// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleRevisionRecordList is rendered correctly to match the snapshot when the length of the log is 0 1`] = `
<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <ArticleRevisionRecordList
    log={Array []}
  />
</ThemeProvider>
`;

exports[`ArticleRevisionRecordList is rendered correctly to match the snapshot when the length of the log is 1 or more 1`] = `
.emotion-2 {
  margin-bottom: 0.75rem;
  font-weight: 600;
  cursor: pointer;
  outline: none;
}

.emotion-4 {
  padding-left: 0;
  margin: 0;
}

.emotion-6 {
  margin-bottom: 0.75rem;
  list-style: none;
}

.emotion-10 {
  font-weight: bolder;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <ArticleRevisionRecordList
    log={
      Array [
        Object {
          "author": "8ayac",
          "date": "2021-01-01T11:11:11.000Z",
          "description": ":test_prefix: this is a test commit 1-1",
          "id": "1000001",
        },
        Object {
          "author": "8ayac",
          "date": "2021-01-01T22:22:22.000Z",
          "description": ":test_prefix: this is a test commit 1-2",
          "id": "1000002",
        },
      ]
    }
  >
    <Details
      open={true}
    >
      <details
        className="emotion-0 emotion-1"
        open={true}
      >
        <Summary>
          <summary
            className="emotion-2 emotion-3"
          >
            Revision History
          </summary>
        </Summary>
        <LogList
          log={
            Array [
              Object {
                "author": "8ayac",
                "date": "2021-01-01T11:11:11.000Z",
                "description": ":test_prefix: this is a test commit 1-1",
                "id": "1000001",
              },
              Object {
                "author": "8ayac",
                "date": "2021-01-01T22:22:22.000Z",
                "description": ":test_prefix: this is a test commit 1-2",
                "id": "1000002",
              },
            ]
          }
        >
          <LogList>
            <ul
              className="emotion-4 emotion-5"
            >
              <LogListItem
                key="1000001"
              >
                <li
                  className="emotion-6 emotion-7"
                >
                  <UpdateDateTime>
                    <time
                      className="emotion-8 emotion-9"
                    >
                      2021-01-01T11:11:11.000Z
                    </time>
                  </UpdateDateTime>
                   
                  <UpdateDescriptionSpan>
                    <span
                      className="emotion-10 emotion-11"
                    >
                      this is a test commit 1-1
                    </span>
                  </UpdateDescriptionSpan>
                   
                  (
                  <ToGitHubCommitAnchor
                    href="https://github.com/8ayac/blog.8ay.ac/commit/1000001"
                    rel="noopener"
                    target="_blank"
                  >
                    <a
                      className="emotion-12 emotion-13"
                      href="https://github.com/8ayac/blog.8ay.ac/commit/1000001"
                      rel="noopener"
                      target="_blank"
                    >
                      #
                      1000001
                    </a>
                  </ToGitHubCommitAnchor>
                   
                  by 
                  8ayac
                  )
                </li>
              </LogListItem>
              <LogListItem
                key="1000002"
              >
                <li
                  className="emotion-6 emotion-7"
                >
                  <UpdateDateTime>
                    <time
                      className="emotion-8 emotion-9"
                    >
                      2021-01-01T22:22:22.000Z
                    </time>
                  </UpdateDateTime>
                   
                  <UpdateDescriptionSpan>
                    <span
                      className="emotion-10 emotion-11"
                    >
                      this is a test commit 1-2
                    </span>
                  </UpdateDescriptionSpan>
                   
                  (
                  <ToGitHubCommitAnchor
                    href="https://github.com/8ayac/blog.8ay.ac/commit/1000002"
                    rel="noopener"
                    target="_blank"
                  >
                    <a
                      className="emotion-12 emotion-13"
                      href="https://github.com/8ayac/blog.8ay.ac/commit/1000002"
                      rel="noopener"
                      target="_blank"
                    >
                      #
                      1000002
                    </a>
                  </ToGitHubCommitAnchor>
                   
                  by 
                  8ayac
                  )
                </li>
              </LogListItem>
            </ul>
          </LogList>
        </LogList>
      </details>
    </Details>
  </ArticleRevisionRecordList>
</ThemeProvider>
`;
